# jupyter-server-nbmodel

./: .copier-answers.yml  .gitignore  .gitmodules  .licenserc.yaml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE.md  conftest.py  install.json  jupyter_server_config.py  package.json  pyproject.toml  tsconfig.json  webpack.lab-config.js
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml  lint.sh  update-integration-tests.yml
binder/: environment.yml  postBuild
examples/: basic.ipynb
jupyter-config/server-config/: jupyter_server_nbmodel.json
jupyter_server_nbmodel/: __init__.py  actions.py  event_logger.py  execution_stack.py  extension.py  handlers.py  log.py  models.py  nextgen_kernels_api
jupyter_server_nbmodel/event_schemas/cell_execution/: v1.yaml
jupyter_server_nbmodel/tests/: __init__.py  test_fd_leak.py  test_handlers.py
src/: executor.ts  handler.ts  index.ts  plugin.ts  requestServer.ts
src/__tests__/: jupyter_server_nbmodel.spec.ts
style/: base.css  index.css  index.js
ui-tests/: README.md  package.json
ui-tests/tests/: jupyter_server_nbmodel.spec.ts
